--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -79,14 +79,13 @@ jobs:
         run: |
           ./unit-test-solution.sh
 
-#       Will be uncommented in RTE-188
-#      - name: Build application tests container
-#        run: |
-#          ./build-app-tests-container.sh
+      - name: Build application tests container
+        run: |
+          ./build-app-tests-container.sh
 
-#      - name: Run application tests container
-#        env:
-#          FORTANIX_API_KEY: ${{ secrets.FORTANIX_API_KEY }}
-#          OVERLAYFS_UNIT_TEST_API_KEY: ${{ secrets.OVERLAYFS_UNIT_TEST_API_KEY }}
-#        run: |
-#         ./run-application-tests.sh ${{ env.TESTS_CONTAINER_ECR }} ${{ env.FORTANIX_API_KEY }}
+      - name: Run application tests container
+        env:
+          FORTANIX_API_KEY: ${{ secrets.FORTANIX_API_KEY }}
+          OVERLAYFS_UNIT_TEST_API_KEY: ${{ secrets.OVERLAYFS_UNIT_TEST_API_KEY }}
+        run: |
+         ./run-application-tests.sh ${{ env.TESTS_CONTAINER_ECR }} ${{ env.FORTANIX_API_KEY }}
