--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -16,6 +16,7 @@ base64 = "0.13.0"
 clap = "2.33"
 const_format = "0.2.32"
 em-app = { workspace = true }
+em-client = { workspace = true }
 env_logger = "0.7"
 futures = "0.3"
 hyper = "0.10"
