--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -29,6 +29,8 @@ tar = { git = "https://github.com/alexcrichton/tar-rs" }
 tempfile = "3.2.0"
 tokio = { version = "1.0.1", features = ["macros", "rt"] }
 toml = "0.5.8"
+url = "2.2.2"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 chrono = "0.4.22"
