--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -25,7 +25,7 @@ serde = { version = "1.0.127", features = ["derive"] }
 serde_json =  { git = "https://github.com/fortanix/serde-json.git", branch = "base64_bytes" }
 shiplift = { git = "https://github.com/fortanix/shiplift.git" }
 sys-mount = "3"
-tar = { git = "https://github.com/alexcrichton/tar-rs" }
+tar = "0.4.39"
 tempfile = "3.2.0"
 tokio = { version = "1.0.1", features = ["macros", "rt"] }
 toml = "0.5.8"
@@ -34,3 +34,6 @@ lazy_static = "1.4.0"
 
 [dev-dependencies]
 chrono = "0.4.22"
+
+[patch.crates-io]
+tar = { git = "https://github.com/alexcrichton/tar-rs" }
