--- a/test/tests-container-salmiac/Dockerfile-salmiac-ub24
+++ b/test/tests-container-salmiac/Dockerfile-salmiac-ub24
@@ -8,14 +8,13 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
     && apt-get upgrade -y \
     && apt-get install -y \
-       awscli \
        build-essential \
        cryptsetup-bin \
        curl \
        default-libmysqlclient-dev \
        git \
        libffi-dev \
-       libmbedtls12 \
+       libmbedtls14 \
        libmysqlclient-dev \
        libnuma-dev \
        musl \
@@ -28,10 +27,12 @@ RUN apt-get update \
        python3-venv \
        sudo \
        tzdata \
+       unzip \
        wget \
     && useradd zircon-tests \
-    && ln -fs /usr/share/zoneinfo/US/Pacific-New /etc/localtime \
+    && ln -fs /usr/share/zoneinfo/CET /etc/localtime \
     && dpkg-reconfigure -f noninteractive tzdata
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && ./aws/install
 
 VOLUME /tmp/build
 
